# kagglemate

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
benchmarks/: README.md  competitions.yaml  run_benchmark.py
benchmarks/results/house-prices-advanced-regression-techniques/20260618_071636/: benchmark_result.json
benchmarks/results/house-prices-advanced-regression-techniques/20260618_071811/: benchmark_result.json
benchmarks/results/spaceship-titanic/20260618_071636/: benchmark_result.json
benchmarks/results/spaceship-titanic/20260618_071811/: benchmark_result.json
docs/: TERMINAL_VALIDATION_GUIDE.md
kagglemate/: __init__.py  chat_agent.py  cli.py  competition_registry.py  config.py  cv_strategy.py  harness.py  mentor.py  session_memory.py  strategy_validator.py  types.py
kagglemate/graph/: builder.py  state.py
kagglemate/graph/nodes/: analyze_node.py  baseline_node.py  deep_research_node.py  ensemble_node.py  evaluate_node.py  init_node.py  kernel_node.py  plan_node.py  research_node.py  run_node.py  submit_node.py  suggest_node.py  tune_node.py
kagglemate/memory/: experiment_store.py  schema.sql
kagglemate/research_providers/: __init__.py  arxiv_provider.py  base.py  kaggle_provider.py  web_provider.py
kagglemate/templates/: baseline_script_template.py.j2  next_steps_template.md  research_summary_template.md  rules_checklist_template.md  spec_template.md  tune_script_template.py.j2
kagglemate/tools/: __init__.py  data_profiler.py  kaggle_cli.py  llm_client.py  submission_validator.py
kagglemate/tutor/: grounded_tutor.py
reports/: benchmark_summary.md  failure_cases.md
tests/: conftest.py  test_deepseek_tools.py
tests/integration/: test_titanic_workflow.py
tests/unit/: test_cli_offline_tutor.py  test_cv_strategy.py  test_experiment_store.py  test_optional_dependencies.py  test_strategy_validator.py  test_submission_validator.py
(+34 files in other folders)
