[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagglemate"
version = "0.1.0"
description = "LangGraph-based Kaggle competition assistant agent powered by DeepSeek V4"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Justin Gao"}
]
keywords = ["kaggle", "machine-learning", "langgraph", "agent", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # ── Data science ──
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",

    # ── CLI & Config ──
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",

    # ── Kaggle CLI ──
    "kaggle>=1.6.0",

    # ── Notebook parsing (Phase 4+) ──
    "nbformat>=5.0.0",

    # ── Benchmark / config ──
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
]
tune = [
    "optuna>=4.0.0",
]
llm = [
    # ── LangGraph + LangChain (Agent framework) ──
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=1.0.0",

    # ── DeepSeek API (OpenAI-compatible SDK) ──
    "openai>=1.60.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
all = [
    "kagglemate[ml,tune,llm,dev]"
]

[project.scripts]
kagglemate = "kagglemate.cli:app"

[tool.setuptools.packages.find]
include = ["kagglemate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "kaggle_data: marks tests that require real locally downloaded Kaggle data",
]
addopts = "-q"
